Created a model, saved as pkl file in model objects, created streamlit front end and also readme file.

--- a/notebooks/Logistic_regression_notebook.ipynb
+++ b/notebooks/Logistic_regression_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e97a8722",
+   "id": "357ee57e",
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "52c66a31",
+   "id": "2e506b68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fb25ec7f",
+   "id": "dba45745",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d953dbeb",
+   "id": "5a8510ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a7c369cb",
+   "id": "ac553eee",
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +231,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "93e3c6ad",
+   "execution_count": 13,
+   "id": "94ad7c5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,8 +244,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "35897ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7532467532467533\n",
+      "Confusion Matrix:\n",
+      " [[79 20]\n",
+      " [18 37]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Confusion Matrix:\\n\", conf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "15a674ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved successfully as diabetes_prediction_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import joblib\n",
+    "import joblib\n",
+    "\n",
+    "# Define the file path to save the model\n",
+    "model_filename = 'diabetes_prediction_model.pkl'\n",
+    "\n",
+    "# Save the model to disk\n",
+    "joblib.dump(model, model_filename)\n",
+    "\n",
+    "print(\"Model saved successfully as\", model_filename)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cd53ec80",
+   "id": "ab4216a1",
    "metadata": {},
    "outputs": [],
    "source": []
